--- a/src/components/logout.css
+++ b/src/components/logout.css
@@ -1,4 +1,3 @@
 #logout-user-button {
-  margin: 15px 2px 10px 45px;
   display: inline-block;
 }
