--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -8,7 +8,8 @@ nav {
 }
 
 .right-nav-container {
-  flex: 2;
+  /* flex: 2; */
+  padding-top: 5px;
 }
 
 .left-nav-container {
@@ -26,5 +27,37 @@ nav {
   text-decoration: none;
   color: black;
   font-size: calc(14px + (30 - 14) * ((100vw - 320px) / (1000 - 320)));
-  padding: 20px;
+  padding: 8px;
+  padding-right: 1px;
+}
+
+/******************************* Media Queries ********************************/
+@media only screen and (min-width: 575px) {
+  .right-nav-container {
+    padding-top: 10px;
+  }
+}
+
+@media only screen and (min-width: 675px) {
+  .right-nav-container {
+    padding-top: 15px;
+  }
+}
+
+@media only screen and (min-width: 775px) {
+  .right-nav-container {
+    padding-top: 20px;
+  }
+}
+
+@media only screen and (min-width: 875px) {
+  .right-nav-container {
+    padding-top: 25px;
+  }
+}
+
+@media only screen and (min-width: 975px) {
+  .right-nav-container {
+    padding-top: 30px;
+  }
 }
